# temp-mon-web

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  README.md  app.py  docker-compose.debug.yml  docker-compose.yml  docker-run.sh  mypy.ini  pyproject.toml  requirements.txt  web-start.sh
app/: __init__.py  app.py  bt_scan.py  config.py  data.py  routes.py
app/sensor_reader/: bluetooth_utils.py  bt.py
app/static/: script.js  styles.css  util.js
app/templates/: index.html
sensor_reader/: bluetooth_utils.py  bt.py
