[tool.poetry]
name = "temp-mon-web"
version = "0.1.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
Flask = "^3.0.3"
Flask-Cors = "^5.0.0"
gunicorn = "^23.0.0"
pydantic = "^2.9.2"
bleak = "^0.22.2"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
types-flask-cors = "^5.0.0.20240902"

[tool.black]
line-length = 160

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
